fix: Fixed breadcrumb separator align for safari

--- a/src/drive/styles/breadcrumb.styl
+++ b/src/drive/styles/breadcrumb.styl
@@ -10,7 +10,7 @@
 
 .fil-path-link
     display          inline-flex
-    align-items      center
+    align-items      baseline
     font-weight      normal
     color            coolGrey
     text-decoration  none
